[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Steven Jiang <steve@clarative.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
